# spa.json.py

./: README.md  pyproject.toml
.github/workflows/: release.yml
spa/: __init__.py
