[tool.poetry]
name = "spa-json-py"
version = "0.0.1"
description = "a python package to build static page apps running on json documents"
authors = ["SVJ <shubhvjain@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spa"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
